--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
 	"type": "module",
 	"dependencies": {
 		"@fontsource-variable/noto-sans": "^5.0.5",
-		"bits-ui": "^0.21.10",
+		"bits-ui": "^0.21.11",
 		"clsx": "^2.1.1",
 		"formsnap": "^1.0.1",
 		"glob": "^10.4.1",
@@ -45,6 +45,7 @@
 		"lucide-svelte": "^0.395.0",
 		"pocketbase": "^0.21.3",
 		"rimraf": "^5.0.7",
+		"svelte-french-toast": "^1.2.0",
 		"svelte-preprocess": "^6.0.1",
 		"sveltekit-superforms": "^2.15.1",
 		"tailwind-merge": "^2.3.0",
