--- a/package.json
+++ b/package.json
@@ -43,10 +43,12 @@
 		"glob": "^10.4.1",
 		"lru-cache": "^10.2.2",
 		"lucide-svelte": "^0.395.0",
+		"mode-watcher": "^0.3.1",
 		"pocketbase": "^0.21.3",
 		"rimraf": "^5.0.7",
 		"svelte-french-toast": "^1.2.0",
 		"svelte-preprocess": "^6.0.1",
+		"svelte-sonner": "^0.3.24",
 		"sveltekit-superforms": "^2.15.1",
 		"tailwind-merge": "^2.3.0",
 		"tailwind-variants": "^0.2.1",
